# smtp-tkinter

./: .gitignore  pyproject.toml  requirements.txt  tkinter.nix
installer/: requirements.txt
scripts/: emailwiz_pt.sh  setup.sh
src/: DNSOutput.py  VPSConnect.py  main.py
