[tool.poetry]
name = "smtp-tkinter"
version = "0.1.0"
description = "Configurador SMTP"
authors = ["lemosjose <devlemosjose@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dnspython = "^2.7.0"
fabric = "^3.2.2"
pycrypto = "^2.6.1"
pycryptodome = "^3.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
